Bug 293574 - Oxygen-transparet has odd rendering above box frames
Summary: Oxygen-transparet has odd rendering above box frames
Status: RESOLVED FIXED
Alias: None
Product: Oxygen
Classification: Plasma
Component: style (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Hugo Pereira Da Costa
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-07 20:39 UTC by gregpitta19
Modified: 2012-02-14 07:15 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1
Sentry Crash Report:


Attachments
Screenshot (76.27 KB, image/png)
2012-02-07 20:40 UTC, gregpitta19
Details
screenshot2 (463.46 KB, image/png)
2012-02-08 13:11 UTC, gregpitta19
Details

Note You need to log in before you can comment on or make changes to this bug.
Description gregpitta19 2012-02-07 20:39:15 UTC
Version:           unspecified (using KDE 4.8.0) 
OS:                Linux

Please have a look at the attached picture.
There is an odd glow above some box-like parts of windows. This glow some times gets corrupted and shows without transparency or with distortions.
Hovering with the mouse seems to refresh the textures.

Reproducible: Always

Steps to Reproduce:
On moving any window, specialy visible on dolphin or in system settings. Maximizing and unmaximizing the window can help visualizing.

Actual Results:  
The glow looks odd.

Expected Results:  
There should be no glow or a better placed one.

Performed on Kubuntu 11.10 x64 
Nvidia gforce 9400gt graphics card. Happens with nouveau graphics or the proprietary ones.

Using the latest version of oxygen-transparent from git.

Feel free to ask for more info that might help.
Comment 1 gregpitta19 2012-02-07 20:40:43 UTC
Created attachment 68606 [details]
Screenshot
Comment 2 Hugo Pereira Da Costa 2012-02-08 11:19:28 UTC
(I can't really reproduce here it seems).

Is the issue *always* here ?
Is the issue still present if you disable blur (from kwin effects) ?
Whats your graphics card ?

Also: are you running "latest" oxygen-transparent ?


Thanks for posting anyway :)
Comment 3 Hugo Pereira Da Costa 2012-02-08 12:36:42 UTC
ok. In fact, I can reproduce, and only if blur is enabled.
Comment 4 Hugo Pereira Da Costa 2012-02-08 12:51:08 UTC
cc-ing kwin, because Philip might have a word to say on it.
(it is *not* blur related, but might be opaque vs transparent region related in KWIN land)
Comment 5 gregpitta19 2012-02-08 13:10:48 UTC
Just to be sure I ran oxygen-setup.pl again. So latest build.
Issue is always there. Disabling blur makes the problem more evident, please look at the new attached screenshot.


 here is my graphics card info from lspci
01:00.0 VGA compatible controller: nVidia Corporation G96 [GeForce 9400 GT] (rev a1)
        Subsystem: XFX Pine Group Inc. Device 243a
        Kernel driver in use: nouveau
        Kernel modules: nouveau, nvidiafb

but i can confirm this bug using the proprietary drivers

01:00.0 VGA compatible controller: nVidia Corporation G96 [GeForce 9400 GT] (rev a1)
        Subsystem: XFX Pine Group Inc. Device 243a
        Kernel driver in use: nvidia
        Kernel modules: nvidia_current_updates, nouveau, nvidiafb

(In reply to comment #2)
> (I can't really reproduce here it seems).
> 
> Is the issue *always* here ?
> Is the issue still present if you disable blur (from kwin effects) ?
> Whats your graphics card ?
> 
> Also: are you running "latest" oxygen-transparent ?
> 
> 
> Thanks for posting anyway :)
Comment 6 gregpitta19 2012-02-08 13:11:58 UTC
Created attachment 68621 [details]
screenshot2
Comment 7 Philipp Knechtges 2012-02-08 15:45:56 UTC
Git commit 39f550f70c3da27b85e87f26f49b8092e2f9a0e2 by Philipp Knechtges.
Committed on 08/02/2012 at 16:41.
Pushed by knechtges into branch 'KDE/4.8'.

kwin: fixing _NET_WM_OPAQUE_REGION related bug

The initial implementation forgot to consider the client borders.
FIXED-IN: 4.8.1

M  +1    -1    kwin/scene.cpp

http://commits.kde.org/kde-workspace/39f550f70c3da27b85e87f26f49b8092e2f9a0e2
Comment 8 Hugo Pereira Da Costa 2012-02-13 17:23:05 UTC
Git commit eebc1a5ed1d60ca5a8df9ec221e5ad1aaca54dd7 by Hugo Pereira Da Costa.
Committed on 08/02/2012 at 15:31.
Pushed by hpereiradacosta into branch 'master'.

use dialog-close icon for tab close.

M  +27   -1    kstyles/oxygen/oxygenstyle.cpp
M  +6    -0    kstyles/oxygen/oxygenstyle.h

http://commits.kde.org/kde-workspace/eebc1a5ed1d60ca5a8df9ec221e5ad1aaca54dd7
Comment 9 Hugo Pereira Da Costa 2012-02-14 07:15:08 UTC
Git commit 6df6485001f492f7b06d53a57f0cd9388d41e139 by Hugo Pereira Da Costa.
Committed on 08/02/2012 at 15:31.
Pushed by hpereiradacosta into branch 'KDE/4.8'.

use dialog-close icon for tab close.

M  +27   -1    kstyles/oxygen/oxygenstyle.cpp
M  +6    -0    kstyles/oxygen/oxygenstyle.h

http://commits.kde.org/kde-workspace/6df6485001f492f7b06d53a57f0cd9388d41e139