kwin: fixing _NET_WM_OPAQUE_REGION related bug

The initial implementation forgot to consider the client borders.

BUG: 293574
FIXED-IN: 4.8.1